# walle-web

./: README.md  pyproject.toml
walle_web/: __init__.py
walle_web/templates/: index.html
